# test

./: test.py
pip/litera/: pyproject.toml  setup.py
pip/litera/src/: __init__.py  echo.py
pip/litera/src/litera.egg-info/: PKG-INFO  SOURCES.txt
